# shrink_wrap

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  typos.toml
.github/workflows/: rust.yml
shrink_wrap/: Cargo.toml
shrink_wrap/src/: buf_reader.rs  buf_writer.rs  lib.rs  nib.rs  nib32.rs  ref_box.rs  traits.rs  un.rs
shrink_wrap/tests/: basic_types.rs
shrink_wrap_core/: Cargo.toml  README.md
shrink_wrap_core/src/ast/: docs.rs  item_enum.rs  item_struct.rs  mod.rs  path.rs  repr.rs  ty.rs  util.rs
shrink_wrap_core/src/codegen/: item_enum.rs  item_struct.rs  mod.rs  ty.rs  util.rs
shrink_wrap_core/src/transform/: docs_util.rs  mod.rs  syn_util.rs  transform_enum.rs  transform_struct.rs  transform_ty.rs  util.rs
shrink_wrap_derive/: Cargo.toml
shrink_wrap_derive/src/: lib.rs  shrink_wrap.rs
