[package]
name = "shrink_wrap"
edition.workspace = true
version.workspace = true
authors.workspace = true
license = "MIT"
repository.workspace = true
description = "Compact zero-copy wire format for microcontrollers using no allocator and supporting dynamic types."
readme = "../README.md"

[dependencies]
defmt = { version = "1.0", optional = true }
tracing = { version = "0.1", optional = true }
paste = "1"
shrink_wrap_derive = { version = "0.1.0", path = "../shrink_wrap_derive" }

[dev-dependencies]
hex-literal = "1"

[features]
default = ["std"]
std = []

defmt = ["dep:defmt"]
defmt-extended = []

tracing-extended = ["dep:tracing", "std"]